[gd_scene load_steps=11 format=3 uid="uid://tk4c25rwhw0q"]

[ext_resource type="Script" path="res://screens/sub_menus/market_screen/market_screen.gd" id="1_vrx16"]
[ext_resource type="Texture2D" uid="uid://cq4csrxwddkb4" path="res://screens/sub_menus/market_screen/assets/market_background.png" id="2_p0k5p"]
[ext_resource type="Texture2D" uid="uid://cjgjnvdvgceab" path="res://assets/screens/shared_assets/go_back_2.png" id="4_ftdnd"]
[ext_resource type="Texture2D" uid="uid://jwmwcyqtv2kh" path="res://assets/screens/shared_assets/go_back_1.png" id="5_tpf87"]
[ext_resource type="AudioStream" uid="uid://cc7rpmevwkpyo" path="res://assets/audio/sfx/buttons_sfx/click_2.mp3" id="6_vlbpn"]
[ext_resource type="PackedScene" uid="uid://1c7quxy7mj4w" path="res://screens/sub_menus/market_screen/products_container/products_container.tscn" id="7_bd58r"]
[ext_resource type="Script" path="res://global_objects/audio_players/sfx_player.gd" id="7_xbif4"]
[ext_resource type="PackedScene" uid="uid://cfb8cp51xqjwy" path="res://screens/sub_menus/market_screen/products_container/buy_product_button/buy_product_button.tscn" id="8_37i6p"]
[ext_resource type="Texture2D" uid="uid://dm3djbjxa5b2a" path="res://screens/sub_menus/market_screen/assets/7th_slot_bag.png" id="9_cce85"]
[ext_resource type="PackedScene" uid="uid://ds50m5bk5qstt" path="res://global_objects/user_balance_displayer/user_balance_displayer.tscn" id="10_4818i"]

[node name="MarketScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrx16")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_p0k5p")

[node name="GoBackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1752.0
offset_top = 14.0
offset_right = 1902.0
offset_bottom = 130.0
texture_normal = ExtResource("5_tpf87")
texture_pressed = ExtResource("4_ftdnd")
texture_hover = ExtResource("4_ftdnd")
flip_h = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vlbpn")
script = ExtResource("7_xbif4")

[node name="ProductsContainer" parent="." instance=ExtResource("7_bd58r")]
layout_mode = 0
offset_left = 283.0
offset_top = 91.0
offset_right = 500.0
offset_bottom = 304.0

[node name="BuyProductButton" parent="ProductsContainer" instance=ExtResource("8_37i6p")]
layout_mode = 2
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"

[node name="UserBalanceDisplayer" parent="." instance=ExtResource("10_4818i")]
position = Vector2(19, 22)

[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
